--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~7.2.0",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
@@ -23,8 +24,9 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
+    "firebase": "^7.9.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
