--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/apexcharts/dist/apexcharts.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
