--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "apexcharts": "^3.20.0",
     "bootstrap": "^4.4.1",
     "core-js": "^2.5.4",
     "firebase": "^7.9.2",
     "hammerjs": "^2.0.8",
+    "ng-apexcharts": "^1.5.1",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
