--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "ng-apexcharts": "^1.5.1",
     "rxjs": "^6.5.4",
+    "sweetalert2": "^9.17.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
