--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.16",
     "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
@@ -28,6 +28,7 @@
     "firebase": "^7.9.2",
     "hammerjs": "^2.0.8",
     "ng-apexcharts": "^1.5.1",
+    "ngx-toastr": "^10.1.0",
     "rxjs": "^6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
